Fixed spelling-format  errors

--- a/infographic-example/index.html
+++ b/infographic-example/index.html
@@ -92,11 +92,11 @@
                 <div class="section-content">
                     <div class="dataviz-summary">
                         <div class="card single-data grade-avg">
-                            <p><span class="text-highlight">VOTO MEDIO</span><br />del diploma di istruzione superiore</p>
+                            <p><span class="text-highlight">Voto medio</span><br />del diploma di istruzione superiore</p>
                             <p><span id="grade-avg" class="text-highlight focus"></span> /100</p>
                         </div>
                         <div class="card single-data age-avg">
-                            <p><span class="text-highlight">ETÀ MEDIA</span><br />al momento dell'immatricolazione</p>
+                            <p><span class="text-highlight">Età media</span><br />al momento dell'immatricolazione</p>
                             <span id="age-avg" class="text-highlight focus"></span>
                         </div>
                     </div>
@@ -222,11 +222,11 @@
                     <div class="dataviz-wrapper"></div>
                     <div class="dataviz-summary">
                         <div class="card single-data grade-avg">
-                            <p><span class="text-highlight">VOTO MEDIO</span><br />di laurea</p>
+                            <p><span class="text-highlight">Voto medio</span><br />di laurea</p>
                             <p><span id="uni-grade-avg" class="text-highlight focus"></span> /110</p>
                         </div>
                         <div class="card single-data duration-avg">
-                            <p><span class="text-highlight">DURATA MEDIA</span><br />degli studi, in anni</p>
+                            <p><span class="text-highlight">Durata media</span><br />degli studi, in anni</p>
                             <span id="years-avg" class="text-highlight focus"></span>
                         </div>
                     </div>
@@ -288,9 +288,8 @@
             <ul> 
                 <li><a href="https://www.unipd.it/dati-statistici-immatricolati">Dati dell'Università degli Studi di Padova sugli studenti immatricolati</a> (a.a. 2022-2023)</li>
                 <li><a href="https://www.unipd.it/dati-statistici-laureati">Dati dell'Università degli Studi di Padova sugli studenti laureati</a> (anno solare 2023)</li>
-                <li><a href="https://www2.almalaurea.it/cgi-php/universita/statistiche/stamp.php?versione=2019&annoprofilo=2023&annooccupazione=2022&codicione=0280106203100001&corsclasse=2031&aggrega=SI&confronta=ateneo&compatibility=0&stella2015=&sua=1#profilo">Dati Almalaurea sulla soddisfazione dei laureati</a> (anno solare 2022)</li> 
-                <li><a href="https://www2.almalaurea.it/cgi-php/universita/statistiche/stamp.php?versione=2019&annoprofilo=2023&annooccupazione=2022&codicione=0280106203100001&corsclasse=2031&aggrega=SI&confronta=ateneo&compatibility=0&stella2015=&sua=1#profilo">Dati Almalaurea sulla condizione occupazionale dei laureati</a> (anno solare 2022)</li>
-                <li><a href="https://univercity.800anniunipd.it/">Dati dell'Università degli Studu di Padova sulle sedi e strutture</a> (anno 2022)</li>
+                <li><a href="https://www2.almalaurea.it/cgi-php/universita/statistiche/stamp.php?versione=2019&annoprofilo=2023&annooccupazione=2022&codicione=0280106203100001&corsclasse=2031&aggrega=SI&confronta=ateneo&compatibility=0&stella2015=&sua=1#profilo">Dati Almalaurea sulla soddisfazione e condizione occupazionale dei laureati</a> (anno solare 2022)</li> 
+                <li><a href="https://univercity.800anniunipd.it/">Dati dell'Università degli Studi di Padova sulle sedi e strutture</a> (anno 2022)</li>
             </ul>
         </div>
 
